--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </div>
             </div>
             <ul class="reviews__switcher">
-              <li class="reviews__switcher-item avatar avatar--active">
+              <li class="reviews__switcher-item avatar">
                 <a href="#" class="avatar__link">
                   <img src="./images/avatar1.png" alt="billie eilish" class="avatar__img">
                 </a>
@@ -241,6 +241,19 @@
       </section>
     </div>
   </div>
+  <nav class="fixed-menu">
+    <ul class="fixed-menu__list">
+      <li class="fixed-menu__item fixed-menu__item--active"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
+    </ul>
+  </nav>
 </body>
 
 </html>
