--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
                 <li class="navbar__item"><a href="#" class="navbar__link">Контакты</a></li>
               </ul>
             </nav>
-            <a href="tel:+78009039090" class="phone">
+            <a href="tel:+78009039090" class="phone header__phone">
               <span class="phone__icon">
                 <img src="./images/vector.png" class="phone__icon" alt="">
               </span>
               <span class="phone__number">8 800 903 90 90</span>
+            </a>
+            <a href="" class="hamburger">
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
             </a>
           </header>
           <div class="hero__text-section">
