--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
               </ul>
             </nav>
             <a href="tel:+78009039090" class="phone header__phone">
-              <span class="phone__icon">
-                <img src="./images/vector.png" class="phone__icon" alt="">
-              </span>
               <span class="phone__number">8 800 903 90 90</span>
             </a>
             <a href="" class="hamburger">
@@ -244,6 +241,41 @@
           </form>
         </div>
       </section>
+
+      <section class="section map-section">
+        <div class="container map">
+          <ul class="map__list">
+            <li class="map__item point--1"><a href="#" class="map__link"></a></li>
+            <li class="map__item point--2"><a href="#" class="map__link"></a></li>
+            <li class="map__item point--3"><a href="#" class="map__link"></a></li>
+            <li class="map__item point--4"><a href="#" class="map__link"></a></li>
+          </ul>
+        </div>
+      </section>
+      <footer class="footer-container">
+        <div class="container footer">
+          <a href="tel:+78009039090" class="phone footer__phone">
+            <div class="phone__adress">Москва, ул.Новый Арбат, д.31/12</div>
+            <span class="phone__number">8 800 903 90 90</span>
+          </a>
+          <nav class="social-networks">
+            <ul class="social-networks__list">
+              <li class="social-networks__item social-networks__item--icon_vk">
+                <a href="#" class="social-networks__link"></a>
+              </li>
+              <li class="social-networks__item social-networks__item--icon_facebook">
+                <a href="#" class="social-networks__link"></a>
+              </li>
+              <li class="social-networks__item social-networks__item--icon_instagram">
+                <a href="#" class="social-networks__link"></a>
+              </li>
+              <li class="social-networks__item social-networks__item--icon_telegram">
+                <a href="#" class="social-networks__link"></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
     </div>
   </div>
   <nav class="fixed-menu">
