--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <img class="header__logo logotype" src="./images/logo.png" alt="header_logo">
+            <img class="header__logo logotype" src="./images/logo.svg" alt="header_logo">
             <nav class="navbar">
               <ul class="navbar__list">
                 <li class="navbar__item"><a href="#" class="navbar__link">О нас</a></li>
@@ -45,15 +45,15 @@
           <div class="hero__icons">
             <ul class="characteristics">
               <li class="characteristics__item characteristic">
-                <img src="./images/noise.png" alt="noice" class="characteristic__img">
+                <img src="./images/noise.svg" alt="noice" class="characteristic__img">
                 <div class="characteristic__info">Безупречный звук</div>
               </li>
               <li class="characteristics__item characteristic">
-                <img src="./images/battery.png" alt="battery" class="characteristic__img">
+                <img src="./images/battery.svg" alt="battery" class="characteristic__img">
                 <div class="characteristic__info">До 40 часов работы</div>
               </li>
               <li class="characteristics__item characteristic">
-                <img src="./images/plug.png" alt="plug" class="characteristic__img">
+                <img src="./images/plug.svg" alt="plug" class="characteristic__img">
                 <div class="characteristic__info">Технология Fast Fuel</div>
               </li>
             </ul>
@@ -74,7 +74,7 @@
             <li class="benefits__item benefit">
               <div class="benefit__img">
                 <div class="benefit__img-wrapper">
-                  <img src="./images/feat-1.png" alt="energy" class="benefit__ico">
+                  <img src="./images/feat-1.svg" alt="energy" class="benefit__ico">
                 </div>
               </div>
               <div class="benefit__text">
@@ -91,7 +91,7 @@
             <li class="benefits__item benefit">
               <div class="benefit__img">
                 <div class="benefit__img-wrapper">
-                  <img src="./images/feat-2.png" alt="energy" class="benefit__ico">
+                  <img src="./images/feat-2.svg" alt="energy" class="benefit__ico">
                 </div>
               </div>
               <div class="benefit__text">
@@ -108,7 +108,7 @@
             <li class="benefits__item benefit">
               <div class="benefit__img">
                 <div class="benefit__img-wrapper">
-                  <img src="./images/feat-3.png" alt="energy" class="benefit__ico">
+                  <img src="./images/feat-3.svg" alt="energy" class="benefit__ico">
                 </div>
               </div>
               <div class="benefit__text">
@@ -261,16 +261,16 @@
           <nav class="social-networks">
             <ul class="social-networks__list">
               <li class="social-networks__item social-networks__item--icon_vk">
-                <a href="#" class="social-networks__link"></a>
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#vk"></use> </svg></a>
               </li>
               <li class="social-networks__item social-networks__item--icon_facebook">
-                <a href="#" class="social-networks__link"></a>
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#facebook"></use> </svg><</a>
               </li>
               <li class="social-networks__item social-networks__item--icon_instagram">
-                <a href="#" class="social-networks__link"></a>
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#instagram"></use> </svg><</a>
               </li>
               <li class="social-networks__item social-networks__item--icon_telegram">
-                <a href="#" class="social-networks__link"></a>
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#telegram"></use> </svg><</a>
               </li>
             </ul>
           </nav>
