--- a/index.html
+++ b/index.html
@@ -124,6 +124,118 @@
         </div>
       </section>
 
+      <section class="section products-section">
+        <div class="container">
+          <div class="products slider">
+            <div class="products slider__arrows"></div>
+            <ul class="products">
+              <li class="products__item product">
+                <div class="product__container">
+                  <div class="product__col product__col--left">
+                    <div class="product__image">
+                      <img src="./images/headphones1.png" alt="headphones">
+                    </div>
+                  </div>
+                  <div class="product__col product__col--right">
+                    <div class="product__characteristics">
+                      <div class="dropdown">
+                        <ul class="dropdown__list">
+                          <li class="dropdown__item information">
+                            <div class="information__col information__col--left">
+                              <div class="information__img">
+                                <img src="./images/grape.svg" alt="bluetooth" class="information__ico">
+                              </div>
+                              <div class="information__name">Bluetooth</div>
+                            </div>
+                            <div class="information__col information__col--right">
+                              <div class="information__value">4.0</div>
+                            </div>
+                          </li>
+                          <li class="dropdown__item information">
+                            <div class="information__col information__col--left">
+                              <div class="information__img">
+                                <img src="./images/nut.svg" alt="way" class="information__ico">
+                              </div>
+                              <div class="information__name">Дальность</div>
+                            </div>
+                            <div class="information__col information__col--right">
+                              <div class="information__value">12 м</div>
+                            </div>
+                          </li>
+                          <li class="dropdown__item information">
+                            <div class="information__col information__col--left">
+                              <div class="information__img">
+                                <img src="./images/almond.svg" alt="charger" class="information__ico">
+                              </div>
+                              <div class="information__name">Зарядка</div>
+                            </div>
+                            <div class="information__col information__col--right">
+                              <div class="information__value">3 ч</div>
+                            </div>
+                          </li>
+                          <li class="dropdown__item information">
+                            <div class="information__col information__col--left">
+                              <div class="information__img">
+                                <img src="./images/washing-powder.svg" alt="weigh" class="information__ico">
+                              </div>
+                              <div class="information__name">Вес</div>
+                            </div>
+                            <div class="information__col information__col--right">
+                              <div class="information__value">215гр</div>
+                            </div>
+                          </li>
+                          <li class="dropdown__item information">
+                            <div class="information__col information__col--left">
+                              <div class="information__img">
+                                <img src="./images/grape.svg" alt="bluetooth" class="information__ico">
+                              </div>
+                              <div class="information__name">Bluetooth</div>
+                            </div>
+                            <div class="information__col information__col--right">
+                              <div class="information__value">4.0</div>
+                            </div>
+                          </li>
+                          <li class="dropdown__item information">
+                            <div class="information__col characteristic__col--left">
+                              <div class="information__img">
+                                <img src="./images/apitherapy.svg" alt="garanty" class="information__ico">
+                              </div>
+                              <div class="information__name">Гарантия</div>
+                            </div>
+                            <div class="information__col information__col--right">
+                              <div class="information__value">1 год</div>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="product__title section__title">beats solo 3. цвет «атласное серебро»</div>
+                    <div class="product__description">Беспроводные наушники Beats Solo3 готовы к работе в любой момент.
+                      Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.</div>
+                    <div class="product__values">
+                      <ul class="product__list">
+                        <li class="product__item value">
+                          <div class="value__title">Зарядка</div>
+                          <div class="value__number">2 часа</div>
+                        </li>
+                        <li class="product__item value">
+                          <div class="value__title">Вес</div>
+                          <div class="value__number">215 грамм</div>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="product__order">
+                      <div class="product__price">14 990 ₽</div>
+                      <div class="button button--theme--red">заказать</div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
       <section class="section reviews__section">
         <div class="container">
           <h2 class="section__title">Отзывы</h2>
@@ -261,16 +373,24 @@
           <nav class="social-networks">
             <ul class="social-networks__list">
               <li class="social-networks__item social-networks__item--icon_vk">
-                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#vk"></use> </svg></a>
-              </li>
-              <li class="social-networks__item social-networks__item--icon_facebook">
-                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#facebook"></use> </svg><</a>
-              </li>
-              <li class="social-networks__item social-networks__item--icon_instagram">
-                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#instagram"></use> </svg><</a>
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon">
+                    <use xlink:href="./images/socials.svg#vk"></use>
+                  </svg></a>
               </li>
               <li class="social-networks__item social-networks__item--icon_telegram">
-                <a href="#" class="social-networks__link"><svg class="social-networks__icon"> <use xlink:href="./images/socials.svg#telegram"></use> </svg><</a>
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon">
+                    <use xlink:href="./images/socials.svg#telegram"></use>
+                  </svg></a>
+              </li>
+              <li class="social-networks__item social-networks__item--icon_facebook">
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon">
+                    <use xlink:href="./images/socials.svg#facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="social-networks__item social-networks__item--icon_instagram">
+                <a href="#" class="social-networks__link"><svg class="social-networks__icon">
+                    <use xlink:href="./images/socials.svg#instagram"></use>
+                  </svg></a>
               </li>
             </ul>
           </nav>
@@ -278,19 +398,24 @@
       </footer>
     </div>
   </div>
-  <nav class="fixed-menu">
-    <ul class="fixed-menu__list">
-      <li class="fixed-menu__item fixed-menu__item--active"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"></a> </li>
-    </ul>
-  </nav>
+
+  <div class="fullscreen-menu">
+    <a href="#" class="fullscreen-menu__close close"><img src="./images/close.svg" alt="close" class="close"></a>
+    <nav class="navbar navbar--vertical">
+      <ul class="navbar__list">
+        <li class="navbar__item">О нас</li>
+        <li class="navbar__item">Наушники</li>
+        <li class="navbar__item">Команда</li>
+        <li class="navbar__item">Цены</li>
+        <li class="navbar__item">Отзывы</li>
+        <li class="navbar__item">Как мы работаем</li>
+        <li class="navbar__item">Контакты</li>
+      </ul>
+    </nav>
+  </div>
+
+  <script src="./JavaScript/modal.js"></script>
+  <script src="./JavaScript/slider.js"></script>
 </body>
 
 </html>
