--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
 
       <section class="section products-section">
         <div class="container">
-          <div class="products slider">
-            <div class="products slider__arrows"></div>
+          <div class="slider">
+            <div class="slider__arrows">
+              <a href="#" class="slider__arrow slider__arrow--left"><img src="./images/left.svg" alt="left arrow" class="slider__image"></a>
+              <a href="#" class="slider__arrow slider__arrow--right"><img src="./images/right.svg" alt="right arrow" class="slider__image"></a>
+            </div>
             <ul class="products">
               <li class="products__item product">
                 <div class="product__container">
@@ -213,8 +216,8 @@
                     <div class="product__description">Беспроводные наушники Beats Solo3 готовы к работе в любой момент.
                       Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.</div>
                     <div class="product__values">
-                      <ul class="product__list">
-                        <li class="product__item value">
+                      <ul class="values">
+                        <li class="values__item value">
                           <div class="value__title">Зарядка</div>
                           <div class="value__number">2 часа</div>
                         </li>
@@ -403,13 +406,13 @@
     <a href="#" class="fullscreen-menu__close close"><img src="./images/close.svg" alt="close" class="close"></a>
     <nav class="navbar navbar--vertical">
       <ul class="navbar__list">
-        <li class="navbar__item">О нас</li>
-        <li class="navbar__item">Наушники</li>
-        <li class="navbar__item">Команда</li>
-        <li class="navbar__item">Цены</li>
-        <li class="navbar__item">Отзывы</li>
-        <li class="navbar__item">Как мы работаем</li>
-        <li class="navbar__item">Контакты</li>
+        <li class="navbar__item"><a href="#" class="navbar__link">О нас</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Наушники</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Команда</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Цены</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Отзывы</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Как мы работаем</a></li>
+        <li class="navbar__item"><a href="#" class="navbar__link">Контакты</a></li>
       </ul>
     </nav>
   </div>
