--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
         <div class="container">
           <div class="slider">
             <div class="slider__arrows">
-              <a href="#" class="slider__arrow slider__arrow--left"><img src="./images/left.svg" alt="left arrow" class="slider__image"></a>
-              <a href="#" class="slider__arrow slider__arrow--right"><img src="./images/right.svg" alt="right arrow" class="slider__image"></a>
+              <a href="#" class="slider__arrow slider__arrow--left"><img src="./images/left.svg" alt="left arrow"
+                  class="slider__image"></a>
+              <a href="#" class="slider__arrow slider__arrow--right"><img src="./images/right.svg" alt="right arrow"
+                  class="slider__image"></a>
             </div>
             <ul class="products">
               <li class="products__item product">
@@ -236,6 +238,137 @@
               </li>
             </ul>
           </div>
+        </div>
+      </section>
+
+      <section class="section team-section">
+        <div class="container">
+          <div class="section__title team-section__title">команда</div>
+          <ul class="team team--version--desctop">
+            <li class="team__item">
+              <div class="team__member"><img src="./images/member1.png" alt="member 1"></div>
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Борис Федорович
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">Главный технолог</div>
+                  <div class="team__duty">Отвечает за вкусовые качества и калорийность.</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member"><img src="./images/member2.png" alt="member 2"></div>
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Алла Иванова
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">Специалист по упаковке</div>
+                  <div class="team__duty">Автор запоминающегося стиля наших батончиков.</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member"><img src="./images/member3.png" alt="member 3"></div>
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Кирилл Матросов
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">Оператор</div>
+                  <div class="team__duty">Разработал дизайн наушников beats solo 3.</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member"><img src="./images/member4.png" alt="member 4"></div>
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Мила Рыжкова
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__profession">PR, маркетинг</div>
+                  <div class="team__duty">По всем вопросам сотрудничества и рекламы писать только Миле.</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+
+          <ul class="team team--version--mobile">
+            <li class="team__item">
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Борис Федорович
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member"><img src="./images/member1.png" alt="member 1"></div>
+                  <div class="team__profession">Главный технолог</div>
+                  <div class="team__duty">Отвечает за вкусовые качества и калорийность.</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Алла Иванова
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__member"><img src="./images/member2.png" alt="member 2"></div>
+                <div class="team__content-block">
+                  <div class="team__profession">Специалист по упаковке</div>
+                  <div class="team__duty">Автор запоминающегося стиля наших батончиков.</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Кирилл Матросов
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__member"><img src="./images/member3.png" alt="member 3"></div>
+                <div class="team__content-block">
+                  <div class="team__profession">Оператор</div>
+                  <div class="team__duty">Разработал дизайн наушников beats solo 3.</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__title">
+                <div class="team__name">
+                  Мила Рыжкова
+                </div>
+                <div class="team__point"><img src="./images/point.svg" class="team__ico"></div>
+              </a>
+              <div class="team__content">
+                <div class="team__member"><img src="./images/member4.png" alt="member 4"></div>
+                <div class="team__content-block">
+                  <div class="team__profession">PR, маркетинг</div>
+                  <div class="team__duty">По всем вопросам сотрудничества и рекламы писать только Миле.</div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -417,7 +550,10 @@
     </nav>
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="./JavaScript/modal.js"></script>
+  <script src="./JavaScript/slider.js"></script>
+  <script src="./JavaScript/acco.js"></script>
 </body>
 
 </html>
